Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117358

BLUETOOTH_SCAN permission flag neverForLocation

XMLWordPrintable

    • Android
    • 13
    • 5efbfcb03 (dev), bb8cf7223 (dev), ada8ffd7c (dev), dca2eb939 (dev), e6aa48dc2 (6.8), e28adc19e (6.8), 785e56f62 (6.8), 3b5499c93 (6.8)
    • Foundation Sprint 114, Foundation Sprint 115

      There are 2 issues with "neverForLocation":

      1. default Permissions in Manifest

      For 'normal' BT LE Device Scan, no Location permission is needed.

      Only less use-cases with BEACONs can need Location

      From my experiences most of developers are using 'normal' BT LE devices where no location is needed

      So it would be great if default generation of BT permissions in Android Manifest can get a slight modification and add a permission flag:

      <uses-permission android:name="android.permission.BLUETOOTH_SCAN"
                       android:usesPermissionFlags="neverForLocation"/>  

      ATM for all my BT LE Apps I cannot use the default Manifest and have to overwrite the permissions.

      But I had to set the Flag, because without the Flag there were some devices under Android 13 where the DeviceList is empty - a very curious side-effect As soon as I add the neverForLocation flag all devices are listed again.

      2. Qt ignores neverForLocation flag

      If the neverForLocation flag is set, Qt ignores and asks user for location permission.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vuokko Juha Vuolle
            ekkescorner Ekkehard
            Vladimir Minenko Vladimir Minenko
            Votes:
            4 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: